# oxideav-scene

./: CHANGELOG.md  Cargo.toml  README.md
design/: scene-unified.md
docs/: use-case-nle-timeline.md  use-case-pdf.md  use-case-rtmp-compositor.md
src/: adapt.rs  animation.rs  audio.rs  audio_mix.rs  duration.rs  id.rs  lib.rs  light.rs  material.rs  node.rs  object.rs  ops.rs  page.rs  paint.rs  raster.rs  raster_renderer.rs  render.rs  scene.rs  source.rs  svg_path.rs  text.rs
tests/: raster_render.rs  scene_geometry_props.rs  smoke.rs  text_render.rs  transform_props.rs
