[package]
name = "oxideav-scene"
version = "0.1.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-scene"
authors = ["Mark Karpeles"]
description = "Pure-Rust time-based scene / composition model for oxideav — PDF pages, RTMP streaming compositor, NLE timelines on one data model"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-scene"
keywords = ["multimedia", "scene", "compositor", "timeline", "pure-rust"]
categories = ["multimedia::video"]

[dependencies]
# 0.1.14 introduced VectorFrame + Group + the full vector primitive set
# that `Page::content` and `ObjectKind::Vector` carry.
oxideav-core = "0.1.14"
oxideav-pixfmt = "0.1"
oxideav-scribe = "0.1"
