[package]
name = "oxideav-scene"
version = "0.1.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-scene"
authors = ["Mark Karpeles"]
description = "Pure-Rust time-based scene / composition model for oxideav — PDF pages, RTMP streaming compositor, NLE timelines on one data model"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-scene"
keywords = ["multimedia", "scene", "compositor", "timeline", "pure-rust"]
categories = ["multimedia::video"]

[features]
default = ["raster"]
# `raster` is preserved as a no-op feature for back-compat — the
# rasteriser was previously gated behind it, but `TextRenderer`
# (always-compiled) now drives the same vector→pixel pipeline that
# `raster::rasterize_vector` uses. Selecting this feature is
# harmless; callers wanting a vector-only build should drop
# `oxideav-scene` entirely (or wait for a future round that splits
# out a vector-pipeline-free subcrate).
raster = []

[dependencies]
# 0.1.14 introduced VectorFrame + Group + the full vector primitive set
# that `Page::content` and `ObjectKind::Vector` carry.
oxideav-core = "0.1"
oxideav-pixfmt = "0.1"
# `oxideav-raster` is now hard-required: `TextRenderer` (in `text.rs`,
# always compiled) shapes glyph runs through `oxideav-scribe`'s vector
# API and rasterises them via `oxideav_raster::Renderer`. The previous
# `Composer` / `render_text` / `RgbaBitmap` re-exports were removed in
# scribe 0.1.5 (#354), so the pixel pipeline lives downstream of scribe
# from this round on.
oxideav-raster = "0.1"
# 0.1.5 dropped the pixel pipeline (`render_text`, `Composer`,
# `RgbaBitmap` re-export) — `TextRenderer` now goes through the
# vector path: `Shaper::shape_to_paths` + `oxideav-raster`.
# Requirement stays at `"0.1"` so the workspace path override
# (currently still tagged 0.1.4 pending the release-plz bump)
# resolves locally; standalone CI against crates.io needs 0.1.5
# published first.
oxideav-scribe = "0.1"
